@@ -1,5 +1,11 @@
 2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
+	* src/av-cp/renderer-combo.c:
+
+	Keep the RenderingControl proxy in renderer combo as well.
+
+2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
 	* src/av-cp/playlist-treeview.c:
 	* src/av-cp/playlist-treeview.h:
 	* src/av-cp/renderer-controls.c:
